--- a/Peon.Web/Views/Home/Index.cshtml
+++ b/Peon.Web/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
         <ul>
             <li><a href="/TestThing">Test Things</a></li>
             <li><a href="/DerivedThing">Derived Things</a></li>
+            <li><a href="/ChildThing">Child Things</a></li>
         </ul>
     </div>
     <div class="col-md-4">
