--- a/Peon.Web/Views/TestThing/Index.cshtml
+++ b/Peon.Web/Views/TestThing/Index.cshtml
@@ -8,6 +8,12 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+
+    @using (Html.BeginForm("Index", "TestThing", FormMethod.Get))
+    {
+        <p>Name: @Html.TextBox("search") <br/>
+        <input type="submit" value="Filter" /></p>
+    }
 </p>
 <table class="table">
     <tr>
