Map with JSON marker read from server

--- a/Peon.Web/Views/Home/Index.cshtml
+++ b/Peon.Web/Views/Home/Index.cshtml
@@ -11,6 +11,12 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Links</h2>
+        <h3>Peon</h3>
+        <ul>
+            <li><a href="Home/Map">Test Map</a></li>
+            <li><a href="Home/MapWithAjax">Test Map : Ajax</a></li>
+            <li><a href="/BaseStation/Index">Base Station</a></li>
+        </ul>
         <h3>Trash</h3>
         <ul>
             <li><a href="/Trash">Trash</a></li>
