Motion of Drivers. Spawner added. Destination of drivers changed to be LatLong.

--- a/Peon.Web/Views/Driver/Index.cshtml
+++ b/Peon.Web/Views/Driver/Index.cshtml
@@ -1,23 +1,28 @@
-﻿@model IEnumerable<Peon.Game.BaseStation>
+﻿@model IEnumerable<Peon.Game.Driver>
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create", "Create")
-    |
-    @Html.ActionLink("Create Spawner", "CreateSpawn")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Destination.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Location)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastUpdate)
         </th>
         <th></th>
     </tr>
@@ -25,16 +30,16 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.Destination.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Location)
         </td>
         <td>
-            @if (item is Peon.Game.SpawnerStation)
-            {
-                @Html.DisplayFor(modelItem => ((Peon.Game.SpawnerStation)item).Destination)
-            }
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastUpdate)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
